trying to fix the collapse burger menu

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ header {
   flex-wrap: wrap;
   justify-content: space-around;
   margin-top: 20px;
+  align-items: center;
 }
 
 .logo {
@@ -61,12 +62,10 @@ header {
   background-color: var(--purple);
 }
 
-.navbar {
-  padding: 0;
-}
-
 .navbar-brand {
   visibility: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 li > a {
@@ -214,7 +213,9 @@ li > a {
   .sepY:nth-child(n + 65):nth-child(-n + 70) {
     display: flex;
   }
-
+  .navbar {
+    padding: 0;
+  }
   .navbar-toggler {
     border: none;
     font-size: 30px;
@@ -249,6 +250,10 @@ li > a {
     order: 3;
   }
 
+  .container-fluid {
+    background-color: none;
+  }
+
   .phoneLoginNav {
     order: 1;
   }
@@ -272,10 +277,10 @@ li > a {
     visibility: hidden;
   }
 
-  .navbar-nav > li {
+  .navbar-nav {
     width: 100vw;
-    background-color: #691e70;
     text-align: center;
+    background-color: #691e70;
     font-size: 18px;
   }
 
